Fix: Added z-indexes to each phase, for iOS rendering
• Added `z-index`es of 100, 200, and 300 to the sky-phase, ambitions-phase, and title-phase divs.
	» For some unknown reason, iOS renders the fixed-position stars in the sky-phase over the content of the ambitions-phase.  This forces the intended order.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6420,6 +6420,7 @@ body {
 }
 #sky-phase {
   position: relative;
+  z-index: 100;
   color: #6fa8da;
 }
 #sky-phase > .back {
@@ -6446,6 +6447,7 @@ body {
 }
 #ambitions-phase {
   position: relative;
+  z-index: 200;
   color: white;
 }
 #ambitions-phase > .back {
@@ -6472,6 +6474,7 @@ body {
 }
 #title-phase {
   position: relative;
+  z-index: 300;
   color: #3e2940;
 }
 #title-phase > .back {
