--- a/less/main.less
+++ b/less/main.less
@@ -51,6 +51,7 @@ html, body { height: 100%; }
 }
 #sky-phase {
 	.phase;
+	z-index: 100;
 	
 	color: @cobalt;
 	
@@ -65,6 +66,7 @@ html, body { height: 100%; }
 }
 #ambitions-phase {
 	.phase;
+	z-index: 200;
 	
 	color: white;
 	
@@ -79,6 +81,7 @@ html, body { height: 100%; }
 }
 #title-phase {
 	.phase;
+	z-index: 300;
 	
 	color: @purple-darker;
 	
